--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    flex-direction:column;
 }
 .container{
     width: 72%;
