--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
     flex-direction:column;
